bootstrap header style and new icon svg sprite in project commit

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,4 +1,4 @@
-
-
-
-// @import './style2.scss'
+@import './abstracts/fonts';
+@import "./abstracts/normalize.scss";
+@import './abstracts/mixins';
+@import './layout/header';
