new section plan, new img and style with adaptive section commit

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,4 +3,5 @@
 @import './abstracts/mixins';
 @import './layout/header';
 @import './components/customers';
+@import './components/plan';
 @import './components/features';
