new section blog, new structure, images and style commit

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,6 +6,7 @@
 @import './components/plan';
 @import './components/features';
 @import './components/stats';
+@import './components/blog';
 @import './components/quotes';
 @import './components/faq';
 @import './components/started';
