new section diagram commit

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,6 +2,7 @@
 @import "./abstracts/normalize.scss";
 @import './abstracts/mixins';
 @import './layout/header';
+@import './components/diagram';
 @import './components/customers';
 @import './components/plan';
 @import './components/features';
