new style newletter, started commit

--- a/src/assets/scss/components/_faq.scss
+++ b/src/assets/scss/components/_faq.scss
@@ -50,6 +50,12 @@
     }
     &__card-body {
         padding: 0px 0 50px 50px;
+        @media screen and (max-width: 576px) {
+            padding: 0px 0 50px 15px;
+        }
+        @media screen and (max-width: 360px) {
+            flex-direction: column !important;
+        }
     }
     &__btn-body {
         background-color: #E8ECF4;
@@ -57,6 +63,15 @@
         font-family: 'Quicksand', sans-serif;
         width: 195px;
         height: 43px;
+        @media screen and (max-width: 576px) {
+            min-width: 132px;
+            height: 60px;
+        }
+        @media screen and (max-width: 360px) {
+            width: 195px;
+            height: 43px;
+            margin-top: 1.5rem !important;
+        }
     }
     &__text {
         font-family: 'Roboto', sans-serif;
@@ -64,5 +79,12 @@
         max-width: 391px;
         letter-spacing: 0.03em;
         margin-right: 62px;
+        @media screen and (max-width: 992px) {
+            margin-right: 30px;
+        }
+        @media screen and (max-width: 576px) {
+            max-width: 325px;
+            margin-right: 10px;
+        }
     }
 }
