--- a/src/assets/scss/components/_started.scss
+++ b/src/assets/scss/components/_started.scss
@@ -7,6 +7,12 @@
         height: 319px;
         width: 1297px;
         margin: 0 auto;
+        @media screen and (max-width: 575px) {
+            max-width: 410px;
+        }
+        @media screen and (max-width: 360px) {
+            max-width: 300px;
+        }
     }
     &__subtitle {
         font-family: 'Roboto', sans-serif;
@@ -19,10 +25,16 @@
         @include text (48px, 300, 60px, #FFFFFF);
         font-family: 'Quicksand', sans-serif;
         margin-bottom: 28px;
+        @media screen and (max-width: 576px) {
+            @include text (35px, 300, 60px, #FFFFFF);
+        }
     }
     &__span {
         @include text (48px, 500, 60px, #FFFFFF);
         font-family: 'Quicksand', sans-serif;
+        @media screen and (max-width: 576px) {
+            @include text (35px, 500, 60px, #FFFFFF);
+        }
     }
     &__text {
         font-family: 'Roboto', sans-serif;
@@ -31,6 +43,9 @@
         max-width: 712px;
         text-align: center;
         margin-bottom: 28px;
+        @media screen and (max-width: 576px) {
+            max-width: 300px;
+        }
     }
     &__btn {
         height: 43px;
@@ -42,6 +57,9 @@
             background: #FFFFFF;
             @include text (13px, 700, 16px, #565F82);
             font-family: 'Quicksand', sans-serif;
+            @media screen and (max-width: 576px) {
+                margin-bottom: 15px;
+            }
         }
         &--blue {
             width: 175px;
@@ -49,5 +67,12 @@
             @include text (13px, 500, 16px, #C7D3FF);
             font-family: 'Quicksand', sans-serif;
         }
+    }
+}
+
+
+.started__btn-group {
+    @media screen and (max-width: 576px){
+    align-items:center !important;
     }
 }
